[package]
name = "gantt_chart"
version = "3.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "A tool for generating Gantt charts"
repository = "https://github.com/jlyonsmith/gantt_chart"
keywords = ["gantt", "chart", "project", "graphics", "skia"]
categories = ["command-line-utilities"]
license = "Unlicense"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.7", features = ["derive"] }
colored = "2.0.0"
easy-error = "1.0.0"
json5 = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
svg = "0.17.0"

[[bin]]
name = "gantt-chart"
path = "src/bin/gantt_chart.rs"
